# AliceO2

devices/flp2epn-distributed/: CMakeLists.txt  EPNex.cxx
devices/flp2epn-distributed/run/: flp_epn_hosts.cfg  flp_epn_topology.xml  runEPN_distributed.cxx  runFLPSampler.cxx  runFLP_distributed.cxx
